# experimentation-data-aggregator

./: .gitignore  pyproject.toml
docker/: Dockerfile  docker-compose.yml
framework/: __init__.py  file1.py  file2.py  file3.py
src/experimental/: __init__.py
src/experimental/analysis/: __init__.py
src/experimental/core/: __init__.py  config.py  enums.py
src/experimental/experiments/: __init__.py  base.py  simulate_experiments.py
src/experimental/persistence/: __init__.py  database.py
src/experimental/utils/: __init__.py  logging.py
src/experimental/visualization/: __init__.py
tests/: __init__.py  conftest.py  test_experiment_analysis.py
