[project]
name = "experimental"
version = "0.1.0"
description = "A robust experimental design framework for A/B testing, multivariate testing, and bandit algorithms"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "polars",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "pyarrow",
    "tabulate",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experimental"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=framework --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
select = ["E", "F", "B"]
ignore = []
line-length = 88
